--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div id="home-part--2">
-          <img src="./images/brand.png" alt="" />
+          <img src="images/brand.png" alt="" />
         </div>
       </div>
       <div id="sales-growth" class="container">
@@ -157,7 +157,7 @@
       <div id="about-us" class="container">
         <div id="about-us--1" class="container">
           <img
-            src="/images/profile1.jpg"
+            src="images/profile1.jpg"
             alt="RumiDevelops"
             data-scroll
             data-scroll-speed="3"
@@ -205,7 +205,7 @@
             </p>
           </div>
           <div class="why-us--right">
-            <img src="/images/brand.png" alt="brand" />
+            <img src="images/brand.png" alt="brand" />
           </div>
         </div>
         <div class="why-us--item">
@@ -221,7 +221,7 @@
             </p>
           </div>
           <div class="why-us--right">
-            <img src="/images/recharge.png" alt="online presence" />
+            <img src="images/recharge.png" alt="online presence" />
           </div>
         </div>
         <div class="why-us--item">
@@ -237,7 +237,7 @@
             </p>
           </div>
           <div class="why-us--right">
-            <img src="/images/dev.png" alt="e-commerce website" />
+            <img src="images/dev.png" alt="e-commerce website" />
           </div>
         </div>
         <div class="why-us--item">
@@ -253,7 +253,7 @@
             </p>
           </div>
           <div class="why-us--right">
-            <img src="/images/research.png" alt="service website" />
+            <img src="images/research.png" alt="service website" />
           </div>
         </div>
         <div class="why-us--item">
@@ -268,7 +268,7 @@
           <div class="why-us--right">
             <img
               style="border-radius: 10px"
-              src="/images/coder-image.webp"
+              src="images/coder-image.webp"
               alt=""
             />
           </div>
@@ -313,7 +313,7 @@
         </div>
         <div id="services-div" class="container grid grid-three--cols">
           <div class="services-div--item mb-3">
-            <img src="/images/css.png" alt="website development" />
+            <img src="images/css.png" alt="website development" />
             <h1>Web Development</h1>
             <p>
               Crafting visually stunning and user-friendly websites that
@@ -324,7 +324,7 @@
             </div>
           </div>
           <div class="services-div--item mb-3">
-            <img src="/images/code.png" alt="website development" />
+            <img src="images/code.png" alt="website development" />
             <h1>Customized Web Apps</h1>
             <p>
               Streamlining processes and enhancing efficiency with tailored web
@@ -335,7 +335,7 @@
             </div>
           </div>
           <div class="services-div--item mb-3">
-            <img src="/images/seo.jpeg" alt="website development" />
+            <img src="images/seo.jpeg" alt="website development" />
             <h1>Google SEO</h1>
             <p>
               Increasing online visibility and driving organic traffic to
@@ -346,7 +346,7 @@
             </div>
           </div>
           <div class="services-div--item mb-3">
-            <img src="/images/e-commerce.jpeg" alt="website development" />
+            <img src="images/e-commerce.jpeg" alt="website development" />
             <h1>E-Commerce Site</h1>
             <p>
               Expanding market reach and boosting sales with seamless shopping
@@ -357,7 +357,7 @@
             </div>
           </div>
           <div class="services-div--item mb-3">
-            <img src="/images/recharge.png" alt="website development" />
+            <img src="images/recharge.png" alt="website development" />
             <h1>Branding & Marketing</h1>
             <p>
               Creating a cohesive and compelling brand identity to stand out in
@@ -368,7 +368,7 @@
             </div>
           </div>
           <div class="services-div--item mb-3">
-            <img src="/images/dev.png" alt="website development" />
+            <img src="images/dev.png" alt="website development" />
             <h1>UI/UX Design</h1>
             <p>
               Delivering intuitive and engaging designs that enhance user
@@ -397,7 +397,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="/images/consultation.jpg" alt="" />
+              <img src="images/consultation.jpg" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -411,7 +411,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="/images/design.jpg" alt="" />
+              <img src="images/design.jpg" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -426,7 +426,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="/images/css.png" alt="" />
+              <img src="images/css.png" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -441,7 +441,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="/images/responsive.jpg" alt="" />
+              <img src="images/responsive.jpg" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -455,7 +455,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="/images/animation.jpeg" alt="" />
+              <img src="images/animation.jpeg" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -469,7 +469,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="/images/ui-ux.jpg" alt="" />
+              <img src="images/ui-ux.jpg" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -483,12 +483,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img
-                height="150px"
-                width="150px"
-                src="/images/speed.jpg"
-                alt=""
-              />
+              <img height="150px" width="150px" src="images/speed.jpg" alt="" />
             </div>
           </div>
           <div class="process-div--item">
