--- a/process.html
+++ b/process.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RUMIDEVELOPS - HOME</title>
+    <title>RUMIDEVELOPS - PROCESS</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -27,7 +27,7 @@
     <div id="nav">
       <div id="nav-part--1">
         <div class="logo">
-          <img src="/images/rumilogo.jpeg" alt="RUMIDEVELOPS" />
+          <img src="images/rumilogo.jpeg" alt="RUMIDEVELOPS" />
         </div>
       </div>
       <div id="nav-part--2">
@@ -64,7 +64,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="/images/consultation.jpg" alt="" />
+              <img src="images/consultation.jpg" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -78,7 +78,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="/images/design.jpg" alt="" />
+              <img src="images/design.jpg" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -93,7 +93,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="/images/css.png" alt="" />
+              <img src="images/css.png" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -108,7 +108,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="/images/responsive.jpg" alt="" />
+              <img src="images/responsive.jpg" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -122,7 +122,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="/images/animation.jpeg" alt="" />
+              <img src="images/animation.jpeg" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -136,7 +136,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="/images/ui-ux.jpg" alt="" />
+              <img src="images/ui-ux.jpg" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -150,12 +150,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img
-                height="150px"
-                width="150px"
-                src="/images/speed.jpg"
-                alt=""
-              />
+              <img height="150px" width="150px" src="images/speed.jpg" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -170,7 +165,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="/images/customer-support.jpg" alt="" />
+              <img src="images/customer-support.jpg" alt="" />
             </div>
           </div>
         </div>
