--- a/works.html
+++ b/works.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RUMIDEVELOPS - PRICING</title>
+    <title>RUMIDEVELOPS - WORKS</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -15,7 +15,7 @@
     <div id="nav">
       <div id="nav-part--1">
         <div class="logo">
-          <img src="/images/rumilogo.jpeg" alt="RUMIDEVELOPS" />
+          <img src="images/rumilogo.jpeg" alt="RUMIDEVELOPS" />
         </div>
       </div>
       <div id="nav-part--2">
@@ -78,7 +78,7 @@
             </div>
             <div class="flex items-center justify-center">
               <img
-                src="/images/rumitravelslogo.png"
+                src="images/rumitravelslogo.png"
                 width="400"
                 height="200"
                 alt="Project Image"
@@ -110,7 +110,7 @@
             </div>
             <div class="flex items-center justify-center">
               <img
-                src="/images/hr-coderslogo.webp"
+                src="images/hr-coderslogo.webp"
                 width="400"
                 height="200"
                 alt="Project Image"
@@ -140,7 +140,7 @@
             </div>
             <div class="flex items-center justify-center">
               <img
-                src="/images/newsmonkeylogo.jpeg"
+                src="images/newsmonkeylogo.jpeg"
                 width="400"
                 height="200"
                 alt="Project Image"
