--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RUMIDEVELOPS - HOME</title>
+    <title>RUMIDEVELOPS - ABOUT</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -27,7 +27,7 @@
     <div id="nav">
       <div id="nav-part--1">
         <div class="logo">
-          <img src="/images/rumilogo.jpeg" alt="RUMIDEVELOPS" />
+          <img src="images/rumilogo.jpeg" alt="RUMIDEVELOPS" />
         </div>
       </div>
       <div id="nav-part--2">
