--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RUMIDEVELOPS - PRICING</title>
+    <title>RUMIDEVELOPS - SERVICES</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -15,7 +15,7 @@
     <div id="nav">
       <div id="nav-part--1">
         <div class="logo">
-          <img src="/images/rumilogo.jpeg" alt="RUMIDEVELOPS" />
+          <img src="images/rumilogo.jpeg" alt="RUMIDEVELOPS" />
         </div>
       </div>
       <div id="nav-part--2">
@@ -106,7 +106,7 @@
                 alt="Website Development"
                 class="mx-auto aspect-video overflow-hidden rounded-xl object-cover object-center sm:w-full lg:order-last"
                 height="310"
-                src="/images/css.png"
+                src="images/css.png"
                 width="550"
               />
             </div>
@@ -121,7 +121,7 @@
                 alt="Why Choose rumidevelops"
                 class="mx-auto aspect-video overflow-hidden rounded-xl object-cover object-center sm:w-full"
                 height="310"
-                src="/images/consultation.jpg"
+                src="images/consultation.jpg"
                 width="550"
               />
               <div class="flex flex-col justify-center space-y-4">
@@ -195,7 +195,7 @@
                 </div>
               </div>
               <img
-                src="/images/dev.png"
+                src="images/dev.png"
                 width="550"
                 height="310"
                 alt="Hero"
@@ -354,7 +354,7 @@
                 </div>
               </div>
               <img
-                src="/images/google seo.jpeg"
+                src="images/google seo.jpeg"
                 width="550"
                 height="310"
                 alt="SEO Services"
@@ -369,7 +369,7 @@
               class="grid gap-6 lg:grid-cols-[1fr_500px] lg:gap-12 xl:grid-cols-[1fr_550px]"
             >
               <img
-                src="/images/recharge.png"
+                src="images/recharge.png"
                 width="550"
                 height="310"
                 alt="SEO Approach"
