final issues resolved

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="/images/customer-support.jpg" alt="" />
+              <img src="images/customer-support.jpg" alt="" />
             </div>
           </div>
         </div>
