--- a/services.html
+++ b/services.html
@@ -529,7 +529,7 @@
                 </div>
               </div>
               <img
-                src="/images/brand.png"
+                src="images/brand.png"
                 width="550"
                 height="310"
                 alt="SEO Benefits"
