seo and speed optimization done!

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <div id="nav">
       <div id="nav-part--1">
         <div class="logo">
-          <img src="images/rumilogo.jpeg" alt="RUMIDEVELOPS" />
+          <img src="images/rumilogo.webp" alt="RUMIDEVELOPS" />
         </div>
       </div>
       <div id="nav-part--2">
@@ -51,7 +51,7 @@
 
       <div id="contact" class="grid grid-two--cols">
         <div id="contact-part--1">
-          <img src="images/research.png" alt="" />
+          <img src="images/research.webp" alt="" />
         </div>
         <div id="contact-part--2">
           <form method="post" action="https://formspree.io/f/xzbnyjag">
