--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="At rumidevelops, we specialize in creating bespoke websites that empower businesses to thrive online. Utilizing advanced A.I technology, we deliver solutions that are not only innovative but also efficient and fast, transforming your digital strategy to boost sales by up to 200% and connect you with your ideal customers."
+    />
+    <meta
+      name="keywords"
+      content="rumidevelops, MERN STACK, Animated modern website, website for your new business, 24/7 service!"
+    />
+    <meta name="robots" content="index, follow" />
     <title>RUMIDEVELOPS - HOME</title>
     <link rel="stylesheet" href="style.css" />
     <link
@@ -25,7 +34,7 @@
     <div id="nav">
       <div id="nav-part--1">
         <div class="logo">
-          <img src="images/rumilogo.jpeg" alt="RUMIDEVELOPS" />
+          <img src="images/rumilogo.webp" alt="RUMIDEVELOPS" />
         </div>
       </div>
       <div id="nav-part--2">
@@ -69,7 +78,7 @@
           </div>
         </div>
         <div id="home-part--2">
-          <img src="images/brand.png" alt="" />
+          <img src="images/brand.webp" alt="" />
         </div>
       </div>
       <div id="sales-growth" class="container">
@@ -157,7 +166,7 @@
       <div id="about-us" class="container">
         <div id="about-us--1" class="container">
           <img
-            src="images/profile1.jpg"
+            src="images/profile1.webp"
             alt="RumiDevelops"
             data-scroll
             data-scroll-speed="3"
@@ -205,7 +214,7 @@
             </p>
           </div>
           <div class="why-us--right">
-            <img src="images/brand.png" alt="brand" />
+            <img src="images/brand.webp" alt="brand" />
           </div>
         </div>
         <div class="why-us--item">
@@ -221,7 +230,7 @@
             </p>
           </div>
           <div class="why-us--right">
-            <img src="images/recharge.png" alt="online presence" />
+            <img src="images/recharge.webp" alt="online presence" />
           </div>
         </div>
         <div class="why-us--item">
@@ -237,7 +246,7 @@
             </p>
           </div>
           <div class="why-us--right">
-            <img src="images/dev.png" alt="e-commerce website" />
+            <img src="images/dev.webp" alt="e-commerce website" />
           </div>
         </div>
         <div class="why-us--item">
@@ -253,7 +262,7 @@
             </p>
           </div>
           <div class="why-us--right">
-            <img src="images/research.png" alt="service website" />
+            <img src="images/research.webp" alt="service website" />
           </div>
         </div>
         <div class="why-us--item">
@@ -313,7 +322,7 @@
         </div>
         <div id="services-div" class="container grid grid-three--cols">
           <div class="services-div--item mb-3">
-            <img src="images/css.png" alt="website development" />
+            <img src="images/css.webp" alt="website development" />
             <h1>Web Development</h1>
             <p>
               Crafting visually stunning and user-friendly websites that
@@ -324,7 +333,7 @@
             </div>
           </div>
           <div class="services-div--item mb-3">
-            <img src="images/code.png" alt="website development" />
+            <img src="images/code.webp" alt="website development" />
             <h1>Customized Web Apps</h1>
             <p>
               Streamlining processes and enhancing efficiency with tailored web
@@ -335,7 +344,7 @@
             </div>
           </div>
           <div class="services-div--item mb-3">
-            <img src="images/seo.jpeg" alt="website development" />
+            <img src="images/seo.webp" alt="website development" />
             <h1>Google SEO</h1>
             <p>
               Increasing online visibility and driving organic traffic to
@@ -346,7 +355,7 @@
             </div>
           </div>
           <div class="services-div--item mb-3">
-            <img src="images/e-commerce.jpeg" alt="website development" />
+            <img src="images/e-commerce.webp" alt="website development" />
             <h1>E-Commerce Site</h1>
             <p>
               Expanding market reach and boosting sales with seamless shopping
@@ -357,7 +366,7 @@
             </div>
           </div>
           <div class="services-div--item mb-3">
-            <img src="images/recharge.png" alt="website development" />
+            <img src="images/recharge.webp" alt="website development" />
             <h1>Branding & Marketing</h1>
             <p>
               Creating a cohesive and compelling brand identity to stand out in
@@ -368,7 +377,7 @@
             </div>
           </div>
           <div class="services-div--item mb-3">
-            <img src="images/dev.png" alt="website development" />
+            <img src="images/dev.webp" alt="website development" />
             <h1>UI/UX Design</h1>
             <p>
               Delivering intuitive and engaging designs that enhance user
@@ -397,7 +406,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="images/consultation.jpg" alt="" />
+              <img src="images/consultation.webp" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -411,7 +420,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="images/design.jpg" alt="" />
+              <img src="images/design.webp" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -426,7 +435,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="images/css.png" alt="" />
+              <img src="images/css.webp" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -441,7 +450,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="images/responsive.jpg" alt="" />
+              <img src="images/responsive.webp" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -455,7 +464,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="images/animation.jpeg" alt="" />
+              <img src="images/animation.webp" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -469,7 +478,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="images/ui-ux.jpg" alt="" />
+              <img src="images/ui-ux.webp" alt="" />
             </div>
           </div>
           <div class="process-div--item">
@@ -483,7 +492,12 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img height="150px" width="150px" src="images/speed.jpg" alt="" />
+              <img
+                height="150px"
+                width="150px"
+                src="images/speed.webp"
+                alt=""
+              />
             </div>
           </div>
           <div class="process-div--item">
@@ -498,7 +512,7 @@
               </p>
             </div>
             <div class="process-item--2">
-              <img src="images/customer-support.jpg" alt="" />
+              <img src="images/customer-support.webp" alt="" />
             </div>
           </div>
         </div>
