--- a/works.html
+++ b/works.html
@@ -15,7 +15,7 @@
     <div id="nav">
       <div id="nav-part--1">
         <div class="logo">
-          <img src="images/rumilogo.jpeg" alt="RUMIDEVELOPS" />
+          <img src="images/rumilogo.webp" alt="RUMIDEVELOPS" />
         </div>
       </div>
       <div id="nav-part--2">
@@ -78,7 +78,7 @@
             </div>
             <div class="flex items-center justify-center">
               <img
-                src="images/rumitravelslogo.png"
+                src="images/rumitravelslogo.webp"
                 width="400"
                 height="200"
                 alt="Project Image"
@@ -140,7 +140,7 @@
             </div>
             <div class="flex items-center justify-center">
               <img
-                src="images/newsmonkeylogo.jpeg"
+                src="images/newsmonkeylogo.webp"
                 width="400"
                 height="200"
                 alt="Project Image"
