--- a/pricing.html
+++ b/pricing.html
@@ -15,7 +15,7 @@
     <div id="nav">
       <div id="nav-part--1">
         <div class="logo">
-          <img src="images/rumilogo.jpeg" alt="RUMIDEVELOPS" />
+          <img src="images/rumilogo.webp" alt="RUMIDEVELOPS" />
         </div>
       </div>
       <div id="nav-part--2">
