--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta
       name="keywords"
-      content="rumidevelops, MERN STACK, Animated modern website, website for your new business, 24/7 service!"
+      content="rumidevelops, MERN STACK, Animated modern website, growing business online!, 24/7 service!"
     />
     <meta name="robots" content="index, follow" />
     <title>RUMIDEVELOPS - HOME</title>
@@ -37,8 +37,33 @@
           <img src="images/rumilogo.webp" alt="RUMIDEVELOPS" />
         </div>
       </div>
+      <input type="checkbox" id="navbar-active" />
+      <label for="navbar-active" class="open-navbar-button"
+        ><svg
+          xmlns="http://www.w3.org/2000/svg"
+          height="32px"
+          viewBox="0 -960 960 960"
+          width="32px"
+          fill="#5f6368"
+        >
+          <path
+            d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
+          /></svg
+      ></label>
       <div id="nav-part--2">
         <ul>
+          <label for="navbar-active" class="close-navbar-button"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="32px"
+              viewBox="0 -960 960 960"
+              width="32px"
+              fill="#5f6368"
+            >
+              <path
+                d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"
+              /></svg
+          ></label>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="services.html">Services</a></li>
@@ -66,11 +91,7 @@
             Utilizing advanced A.I technology, we deliver solutions that are not
             only innovative but also efficient and fast, transforming your
             digital strategy to
-            <a
-              href="contact.html"
-              style="color: rgb(249, 48, 48); font-weight: 600; font-size: 24px"
-              >boost sales by up to 200%</a
-            >
+            <a href="contact.html">boost sales by up to 200%</a>
             and connect you with your <span>ideal customers</span>.
           </h3>
           <div id="contactBtn">
