--- a/process.html
+++ b/process.html
@@ -30,8 +30,33 @@
           <img src="images/rumilogo.webp" alt="RUMIDEVELOPS" />
         </div>
       </div>
+      <input type="checkbox" id="navbar-active" />
+      <label for="navbar-active" class="open-navbar-button"
+        ><svg
+          xmlns="http://www.w3.org/2000/svg"
+          height="32px"
+          viewBox="0 -960 960 960"
+          width="32px"
+          fill="#5f6368"
+        >
+          <path
+            d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
+          /></svg
+      ></label>
       <div id="nav-part--2">
         <ul>
+          <label for="navbar-active" class="close-navbar-button"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="32px"
+              viewBox="0 -960 960 960"
+              width="32px"
+              fill="#5f6368"
+            >
+              <path
+                d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"
+              /></svg
+          ></label>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="services.html">Services</a></li>
