Updating the website!

--- a/index.html
+++ b/index.html
@@ -78,28 +78,30 @@
       </div>
       <div id="nav-part--3">
         <div id="contactBtn">
-          <a href="contact.html"><button>Contact Us</button></a>
+          <a href="contact.html"><button>transform your business!</button></a>
         </div>
       </div>
     </div>
     <div id="main">
       <div id="home">
         <div id="home-part--1">
-          <h1>
-            WE BUILD SMALL BUSINESSES' <span>SOCIAL PRESENCE</span> & HELP THEM
-            <span>GROW!</span>
-          </h1>
+          <h1>WE HELP SMALL BUSINESSES TO <span> GROW ONLINE!</span></h1>
           <h3>
-            At <span>rumidevelops</span>, we specialize in creating bespoke
-            websites that empower businesses to thrive <span>online</span>.
-            Utilizing advanced A.I technology, we deliver solutions that are not
-            only innovative but also efficient and fast, transforming your
-            digital strategy to
-            <a href="contact.html">boost sales by up to 200%</a>
-            and connect you with your <span>ideal customers</span>.
+            We understand that growing a business is
+            <span class="internal-problem">hard</span> and competing with the
+            big dawgs of the market is a
+            <span class="internal-problem">headache</span>. We will create your
+            <span> brand website </span> and enhance your marketing material,
+            offering solutions that will help you increase your market share and
+            assist you in
+            <span>transforming your business into a well-recognized brand</span>
+            while
+            <a href="contact.html">skyrocketing your sales by up to 200%</a>.
           </h3>
           <div id="contactBtn">
-            <a href="contact.html"><button>Get Started</button></a>
+            <a href="contact.html"
+              ><button>transform your business. free consultation!</button></a
+            >
           </div>
         </div>
         <div id="home-part--2">
