Above the fold updated!

--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
               /></svg
           ></label>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="services.html">Services</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="pricing.html">Pricing </a></li>
-          <li><a href="process.html">Process</a></li>
-          <li><a href="works.html">Projects</a></li>
+          <li><a href="works.html">Our Work</a></li>
         </ul>
       </div>
       <div id="nav-part--3">
         <div id="contactBtn">
-          <a href="contact.html"><button>transform your business!</button></a>
+          <a href="contact.html"
+            ><button>book your free consultation call!</button></a
+          >
         </div>
       </div>
     </div>
