stakes ection done!

--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
       </div>
       <div id="nav-part--3">
         <div id="contactBtn">
-          <a href="contact.html"
-            ><button>book your free consultation call!</button></a
-          >
+          <a href="contact.html"><button>free consultation!</button></a>
         </div>
       </div>
     </div>
@@ -100,12 +98,58 @@
           </h3>
           <div id="contactBtn">
             <a href="contact.html"
-              ><button>transform your business. free consultation!</button></a
+              ><button>book your free consultation now!</button></a
             >
           </div>
         </div>
         <div id="home-part--2">
           <img src="images/brand.webp" alt="" />
+        </div>
+      </div>
+      <div id="problems" class="container">
+        <h1>
+          Frustrated of being an average business in Pakistan with a website
+          that does not convert visitors into customers?
+          <span>( Worse if you don't have one! )</span>
+        </h1>
+        <div id="problems-div">
+          <div id="problems-part--1">
+            <p>
+              As owners, we all <span>love our business</span>. But did you
+              know?
+            </p>
+            <p>
+              An outdated website can <span class="danger">hurt</span> your
+              business. You may lose potential customers to competitors with
+              better websites. A poor online presence can damage your reputation
+              and frustrate visitors. Without a strong brand website, your
+              business may struggle to get noticed.
+            </p>
+            <br /><br />
+            <p>
+              Missing out on a great brand website means missed opportunities
+              and limited growth. Customers might choose competitors, leading to
+              lower sales. Delaying updates makes it harder to rebuild your
+              brand's credibility. You need a brand website which looks good and
+              converts <span>visitors into buyers!</span>
+            </p>
+            <br /><br />
+            <p>
+              Get a top-notch website that sets you apart. Capture more leads,
+              build your brand, and grow your market share. Enjoy peace of mind
+              and never again frustrate over getting more sales with an
+              optimized brand website that drives success and boosts sales.
+            </p>
+          </div>
+          <div id="problems-part--2">
+            <img src="images/frustrated-man.avif" alt="" />
+          </div>
+        </div>
+
+        <div id="contactBtn">
+          <a href="contact.html"
+            ><button>get your brand website now!</button></a
+          >
         </div>
       </div>
       <div id="sales-growth" class="container">
